[gd_scene load_steps=4 format=3 uid="uid://level_generic"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/board.tscn" id="2"]

[node name="level" type="Node2D"]
script = ExtResource("1")

[node name="TopUI" type="Node2D" parent="."]

[node name="LabelLevel" type="Label" parent="TopUI"]
position = Vector2(10, 10)
text = "Level"

[node name="LabelMoves" type="Label" parent="TopUI"]
position = Vector2(10, 30)
text = "Moves Left: 0"

[node name="LabelObjective" type="Label" parent="TopUI"]
position = Vector2(10, 50)
text = "Objective"

[node name="BoardContainer" type="Node2D" parent="."]
position = Vector2(100, 120)

[node name="Board" parent="BoardContainer" instance=ExtResource("2")]

[node name="WinDialog" type="AcceptDialog" parent="."]
visible = false
title = "You Win!"

[node name="LoseDialog" type="AcceptDialog" parent="."]
visible = false
title = "You Lose!"
